--- a/themes/novatec/layouts/partials/noticias-home.html
+++ b/themes/novatec/layouts/partials/noticias-home.html
@@ -10,7 +10,10 @@
          <li>
            <a class="noticia-image-link" href="{{ .Permalink }}">
              <div class="noticia-imagen-container">
-                <img src="{{ $.Site.Params.cloudinary_url }}f_auto,w_260,h_195,c_fill{{ .Params.imagen_intro }}" alt="{{ .Title }}" />
+                <img
+                  class="lazy"
+                  data-src="{{ $.Site.Params.cloudinary_url }}f_auto,w_260,h_195,c_fill{{ .Params.imagen_intro }}" 
+                  alt="{{ .Title }}" />
              </div>
            </a>
            <a class="noticia-title" href="{{ .Permalink }}">
