--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="/myFavicon.ico" type="image/x-icon" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="preload" href="/fonts/slick.woff" as="font">
+  <!-- <link rel="preload" href="/fonts/slick.woff" as="font"> -->
   <link rel="preload" rel="stylesheet" type="text/css" href="/site.css" media="all" as="style">
   <script rel="preload" src="/js/11a79f3edd.js" as="javascript"></script>
   {{ partial "social-metatags.html" . }}
