--- a/assets/scss/_slick-theme.scss
+++ b/assets/scss/_slick-theme.scss
@@ -7,7 +7,7 @@
 // "\2192" outputs ascii character "→"
 // "\2022" outputs ascii character "•"
 
-$slick-font-path: "./fonts/" !default;
+$slick-font-path: "/fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
@@ -51,8 +51,8 @@ $slick-opacity-not-active: 0.25 !default;
 @if $slick-font-family == "slick" {
     @font-face {
         font-family: "slick";
-        src: slick-font-url("/fonts/slick.eot");
-        src: slick-font-url("/fonts/slick.eot?#iefix") format("embedded-opentype"), slick-font-url("/fonts/slick.woff") format("woff"), slick-font-url("/fonts/slick.ttf") format("truetype"), slick-font-url("/fonts/slick.svg#slick") format("svg");
+        src: slick-font-url("slick.eot");
+        src: slick-font-url("slick.eot?#iefix") format("embedded-opentype"), slick-font-url("slick.woff") format("woff"), slick-font-url("slick.ttf") format("truetype"), slick-font-url("slick.svg#slick") format("svg");
         font-weight: normal;
         font-style: normal;
     }
