--- a/assets/scss/_slick-theme.scss
+++ b/assets/scss/_slick-theme.scss
@@ -8,13 +8,13 @@
 // "\2022" outputs ascii character "•"
 
 $slick-font-path: "/fonts/" !default;
-$slick-font-family: "slick" !default;
+$slick-font-family: "FontAwesome" !default;
 $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
-$slick-prev-character: "\2190" !default;
-$slick-next-character: "\2192" !default;
+$slick-prev-character: "\f0a8" !default;
+$slick-next-character: "\f0a9" !default;
 $slick-dot-character: "\2022" !default;
 $slick-dot-size: 6px !default;
 $slick-opacity-default: 0.75 !default;
