--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -7,13 +7,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preload" href="/fonts/slick.woff" as="font">
-  <link rel="preload" rel="stylesheet" type="text/css" href="/site.css" media="all" as="style">
+  <link rel="stylesheet" type="text/css" href="/site.css" media="all">
   <script rel="preload" src="/js/11a79f3edd.js" as="javascript"></script>
   {{ partial "social-metatags.html" . }}
 </head>
 <body translate="no">
   {{ partial "header.html" . }}
   <main id="main">
+    <h1>{{ getenv "ENV" }}</h1>
     {{ block "page-title" . }}
     {{ end }}
     {{ block "main" . }}
