Stop preloading main css

--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="/myFavicon.ico" type="image/x-icon" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="preload" href="/site.css" as="style" onload="this.rel='stylesheet'">
+  <link rel="stylesheet" href="/site.css" >
   {{ partial "social-metatags.html" . }}
 </head>
 <body translate="no">
