--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -20,14 +20,19 @@
       {{ range .Site.Menus.principal }}
         {{ if .HasChildren }}
           <li class="first-level-item{{if or ($currentPage.HasMenuCurrent "principal" .) ($currentPage.IsMenuCurrent "principal" .) }} active{{end}}">
-            <a class="first-level-link" href="{{.URL}}">{{ .Name }}<i class="fa fa-caret-down"></i></a>
-              <ul class="second-level">
-                {{ range .Children.ByWeight }}
-                  <li class="second-level-item{{if $currentPage.IsMenuCurrent "principal" . }} active{{end}}">
-                    <a class="second-level-link" href="{{.URL}}"> {{ .Name }} </a>
-                  </li>
-                {{ end }}
-              </ul>
+            <a class="first-level-link" href="{{.URL}}">
+              {{ .Name }}
+              <svg viewBox="0 0 8 8" class="caret">
+                <use xlink:href="open-iconic.svg#caret-bottom"></use>
+              </svg>
+            </a>
+            <ul class="second-level">
+              {{ range .Children.ByWeight }}
+                <li class="second-level-item{{if $currentPage.IsMenuCurrent "principal" . }} active{{end}}">
+                  <a class="second-level-link" href="{{.URL}}"> {{ .Name }} </a>
+                </li>
+              {{ end }}
+            </ul>
             </li>
           {{ else }}
             <li class="first-level-item{{if or ($currentPage.IsMenuCurrent "principal" .) ($currentPage.HasMenuCurrent "principal" .) }} active{{end}}">
