--- a/assets/scss/components/_header-search.scss
+++ b/assets/scss/components/_header-search.scss
@@ -8,31 +8,6 @@
     float: right;
     position: relative;
     z-index: z('base');
-
-    &:after {
-      content: "\f002";
-      font-family: FontAwesome;
-      left: 12px;
-      position: absolute;
-      top: 15px;
-      color: $text-color;
-      font-size: 14px;
-      width: 20px;
-      z-index: z('base');
-      pointer-events: none;
-   cursor: default;
-
-      @include grid-media($desktop-grid) {
-        position: absolute;
-        top: 15px;
-      }
-
-      @include grid-media($large-desktop-grid) {
-        position: absolute;
-        left: 12px;
-        top: 15px;
-      }
-    }
   }
 
   @include grid-media($desktop-grid) {
@@ -54,23 +29,23 @@
     border: solid 1px $mid-grey;
     font-size: 14px;
     margin-top: 5px;
-    padding: 10px 15px 10px 35px;
+    padding: 10px 15px;
     width: 100%;
     z-index: z('search-input');
 
     @include grid-media($desktop-grid) {
-      padding: 10px 10px 10px 26px;
+      padding: 10px;
       width: 33px;
       box-sizing: border-box;
     }
 
     @include grid-media($large-desktop-grid) {
-      padding: 10px 15px 10px 35px;
+      padding: 10px 15px;
       width: 100%;
     }
 
     &:focus {
-      padding: 10px 15px 10px 35px;
+      padding: 10px 15px;
       width: 100%;
       outline: 0;
       -webkit-box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.25);
