--- a/assets/scss/base/_icons.scss
+++ b/assets/scss/base/_icons.scss
@@ -1,6 +1,6 @@
 .icon {
-  width: 16px;
-  height: 16px;
+  width: 12px;
+  height: 12px;
 }
 
 .icon-account-login {
@@ -15,4 +15,14 @@
 
 .first-level-link:hover > .caret {
   fill: #fff;
+}
+
+#footer .icon {
+  fill: #ccc;
+  margin-right: 5px;
+}
+
+#abrir-main-nav-button .icon {
+  width: 20px;
+  height: 20px;
 }
