Fix iconic routes

--- a/themes/novatec/layouts/partials/footer.html
+++ b/themes/novatec/layouts/partials/footer.html
@@ -9,14 +9,14 @@
 
     <p>
       <svg viewBox="0 0 8 8" class="icon">
-        <use xlink:href="open-iconic.svg#globe"></use>
+        <use xlink:href="/open-iconic.svg#globe"></use>
       </svg> 
       De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén, Heredia, Costa Rica.
     </p>
     <p>
       <a href="https://www.google.co.cr/maps/place/Novatec+Industrial+S.A./@9.9658497,-84.2074156,17z/data=!4m2!3m1!1s0x0000000000000000:0xb454eda2f42f9176?hl=es" target="_blank" rel="noopener noreferrer">
         <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="open-iconic.svg#map-marker"></use>
+          <use xlink:href="/open-iconic.svg#map-marker"></use>
         </svg> 
         Abrir en Google Maps
       </a>
@@ -24,7 +24,7 @@
     <p>
       <a class="btn-primary btn-waze" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes" rel="noopener noreferrer">
         <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="open-iconic.svg#location"></use>
+          <use xlink:href="/open-iconic.svg#location"></use>
         </svg> 
         Abrir en Waze
       </a>
@@ -35,17 +35,17 @@
     <ul>
       <li>
         <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="open-iconic.svg#inbox"></use>
+          <use xlink:href="/open-iconic.svg#inbox"></use>
         </svg> 
         650-4005 Belén, Heredia, Costa Rica.</li>
       <li>
         <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="open-iconic.svg#phone"></use>
+          <use xlink:href="/open-iconic.svg#phone"></use>
         </svg> 
         +506 2239-1111</li>
       <li>
         <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="open-iconic.svg#phone"></use>
+          <use xlink:href="/open-iconic.svg#phone"></use>
         </svg> 
         +506 2239-1212</li>
       <li>
@@ -53,14 +53,14 @@
           {{ $email := "ventas-nc@novatec.cr" }}
           <a href="mailto:{{ $email }}" target="_top">
             <svg viewBox="0 0 8 8" class="icon">
-              <use xlink:href="open-iconic.svg#envelope-closed"></use>
+              <use xlink:href="/open-iconic.svg#envelope-closed"></use>
             </svg>  {{ $email }}
           </a>
         {{ else }}
           {{ $email := "info@novatec.cr" }}
           <a href="mailto:{{ $email }}" target="_top">
             <svg viewBox="0 0 8 8" class="icon">
-              <use xlink:href="open-iconic.svg#envelope-closed"></use>
+              <use xlink:href="/open-iconic.svg#envelope-closed"></use>
             </svg> 
             {{ $email }}
           </a>
@@ -73,13 +73,11 @@
     <ul class="nav  nav-pills nav-stacked list-unstyled" id="social-footer">
       <li>
         <a class="" href="https://www.facebook.com/NovatecIndustrial" target="_blank" rel="noopener noreferrer">
-          <i class="fa fa-facebook-square"></i>
           <span>Facebook</span>
         </a>
       </li>
       <li>
         <a class="" href="https://twitter.com/novatecnews" target="_blank" rel="noopener noreferrer">
-          <i class="fa fa-twitter-square"></i>
           <span>Twitter</span>
         </a>
       </li>
