--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header id="main-header">
   <a href="javascript:void(0)" id="abrir-main-nav-button" onclick="openNav()">
     <svg viewBox="0 0 8 8" class="icon">
-      <use xlink:href="open-iconic.svg#menu"></use>
+      <use xlink:href="/open-iconic.svg#menu"></use>
     </svg>
   </a>
   <div class="header-logo-container">
@@ -26,7 +26,7 @@
             <a class="first-level-link" href="{{.URL}}">
               {{ .Name }}
               <svg viewBox="0 0 8 8" class="caret">
-                <use xlink:href="open-iconic.svg#caret-bottom"></use>
+                <use xlink:href="/open-iconic.svg#caret-bottom"></use>
               </svg>
             </a>
             <ul class="second-level">
