--- a/assets/scss/components/_slides.scss
+++ b/assets/scss/components/_slides.scss
@@ -53,3 +53,35 @@
     width: 100%;
   }
 }
+
+.slider-container {
+  position: relative;
+}
+
+.next, .prev {
+  position: absolute;
+  top: 50%;
+  margin-top: -10px;
+  z-index: 9;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity .5s ease;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  .icon {
+    fill: #fff;
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.prev {
+  left: 20px;
+}
+
+.next {
+  right: 20px;
+}
