Width 100% to home noticias images

--- a/assets/scss/components/_noticias-home.scss
+++ b/assets/scss/components/_noticias-home.scss
@@ -15,6 +15,10 @@
     @include grid-media($tablet-grid){
       @include grid-column(3);
     }
+
+    img {
+      width: 100%;
+    }
   }
 
   .noticia-title {
