--- a/assets/scss/layout/_product-grid.scss
+++ b/assets/scss/layout/_product-grid.scss
@@ -12,7 +12,7 @@
   margin-bottom: $general-padding;
   transition: all 0.5s;
   box-shadow: 0;
-  background-image: url('http://via.placeholder.com/268x201/f0f0f0/ffffff?text=Sin+imagen');
+  background-image: url('https://via.placeholder.com/268x201/f0f0f0/ffffff?text=Sin+imagen');
 
   @include grid-media($tablet-grid) {
     @include grid-column(4);
