Load scripts in all pages

--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -30,5 +30,5 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-  {{ block "scripts" .}}{{ end }}
+  {{ block "scripts" .}}<script rel="preload" src="/js/site.js"></script>{{ end }}
 </body>
