--- a/assets/scss/pages/_marca.scss
+++ b/assets/scss/pages/_marca.scss
@@ -1,8 +1,24 @@
 .marca-page-logo {
   @include grid-column(3);
   border: solid 1px $light-grey;
-  padding-bottom: 20px;
+  position: relative;
+
+  &:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+  }
 }
+
+.marca-page-logo-content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-flow: column wrap;
+    padding: 20px;
+  }
 
 .marca-page-info {
   @include grid-column(9);
