List brands instead of industrias in industrias pages

--- a/themes/novatec/layouts/taxonomy/industria.html
+++ b/themes/novatec/layouts/taxonomy/industria.html
@@ -23,7 +23,7 @@
       </div>
       <div class="industria-page-marcas">
         <h2>Marcas</h2>
-        {{ partial "pages-list.html" ($.Site.GetPage "taxonomyTerm" "industrias").Pages }}
+        {{ partial "pages-list.html" ($.Site.GetPage "taxonomyTerm" "marcas").Pages }}
       </div>
     </div>
   </div>
