Show right links in industrias page

--- a/themes/novatec/layouts/taxonomy/industria.terms.html
+++ b/themes/novatec/layouts/taxonomy/industria.terms.html
@@ -14,7 +14,7 @@
     <div class="container">
       <section id="industrias-block">
         {{ range where (where .Data.Pages.ByWeight ".Params.id" "!=" nil) ".Params.draft" "!=" true }}
-          <div class="industria-title" id="{{ urlize .Title }}">{{ .Title }}</div>
+          <div class="industria-title" id="{{ urlize .Title }}">{{ .Title | plainify}}</div>
           <div class="industria-block">
             <div class="grid-container">
               <div class="industria-detalles">
@@ -24,13 +24,12 @@
 
               <div class="industria-productos">
                 <h3>Productos</h3>
+                {{ $current_industria := urlize .Title }}
                 <ul>
-                  {{ $marcas := urlize .Title }}
-                  {{ $taxonomy := index $.Site.Taxonomies.industrias .Title }}
-                  {{ range $taxonomy.Pages }}
-                    {{ $this_marca := .Params.marcas }}
-                    {{ $.Scratch.Add $marcas $this_marca }}
-                    <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+                  {{ range .Pages }} {{ range .Params.marcas }} {{ $.Scratch.Add $current_industria (slice .) }} {{ end }}
+                  <li>
+                    <a href="{{ .Permalink }}">{{ .Title }}</a>
+                  </li>
                   {{ end }}
                 </ul>
               </div>
@@ -38,7 +37,7 @@
               <div class="industria-marcas">
                 <h3>Marcas</h3>
                 <ul>
-                  {{ $current_marcas := $.Scratch.Get $marcas}}
+                  {{ $current_marcas := $.Scratch.Get $current_industria }}
                   {{ range uniq $current_marcas }}
                     {{ with $.Site.GetPage "taxonomyTerm" "marcas" (urlize .) }}
                       <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
