--- a/themes/novatec/layouts/taxonomy/industria.html
+++ b/themes/novatec/layouts/taxonomy/industria.html
@@ -6,7 +6,7 @@
   <div class="container industria-page">
     <div class="row">
       <div class="industria-page-imagen">
-        <img src="/images/industrias/{{ .Params.imagen }}" alt="{{ .Title }}" />
+        <img src="{{ $.Site.Params.cloudinary_url }}w_500,h_350,c_fill,f_auto{{ .Params.imagen }}" alt="{{ .Title }}">
 
         {{ with .Params.catalogo }}
           <div class="text-center small-text">
