--- a/assets/scss/pages/_marca.scss
+++ b/assets/scss/pages/_marca.scss
@@ -1,6 +1,19 @@
-.marca-page-logo {
+.logo-container{
   @include grid-column(3);
   border: solid 1px $light-grey;
+}
+
+.marca-page-logo-content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-flow: column nowrap;
+  padding: 20px;
+}
+
+.marca-page-logo {
   position: relative;
 
   &:after {
@@ -9,16 +22,6 @@
     padding-bottom: 100%;
   }
 }
-
-.marca-page-logo-content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    flex-flow: column wrap;
-    padding: 20px;
-  }
 
 .marca-page-info {
   @include grid-column(9);
