--- a/themes/novatec/layouts/section/productos.html
+++ b/themes/novatec/layouts/section/productos.html
@@ -8,7 +8,9 @@
       {{ range where ($.Site.GetPage "taxonomyTerm" "familias").Pages.ByWeight ".Params.id" "!=" nil }}
         <li class="product-grid-block">
           <a href="{{ .Permalink }}">
-            <div class="product-grid-image" style="background-image: url({{ .Params.imagen }});"></div>
+            <div class="product-grid-image">
+              <img src="{{ $.Site.Params.cloudinary_url }}{{ .Params.imagen }}" alt="{{ .Title }}" />
+            </div>
             <div class="product-block-title">
               <h3>{{ .Title }}</h3>
             </div>
