--- a/themes/novatec/layouts/taxonomy/familia.html
+++ b/themes/novatec/layouts/taxonomy/familia.html
@@ -6,11 +6,8 @@
   <div class="container">
     <ul class="product-grid">
       {{ $title := lower (replace (replace .Title "á" "a") "í" "i") }}
-      {{ with $.Site.GetPage "taxonomyTerm" "familias" "valvulas" }}
-        {{ .Render "li" }}
-      {{ end }}
       {{ range .Data.Pages }}
-        {{ .Render "li" }}
+        {{ partial "product-block.html" . }}
       {{ end }}
     </ul>
   </div>
