--- a/themes/novatec/layouts/section/productos.html
+++ b/themes/novatec/layouts/section/productos.html
@@ -6,16 +6,7 @@
   <div class="container">
     <ul class="product-grid">
       {{ range where ($.Site.GetPage "taxonomyTerm" "familias").Pages.ByWeight ".Params.id" "!=" nil }}
-        <li class="product-grid-block">
-          <a href="{{ .Permalink }}">
-            <div class="product-grid-image">
-              <img src="{{ $.Site.Params.cloudinary_url }}{{ .Params.imagen }}" alt="{{ .Title }}" />
-            </div>
-            <div class="product-block-title">
-              <h3>{{ .Title }}</h3>
-            </div>
-          </a>
-        </li>
+        {{ partial "product-block.html" . }}
       {{ end }}
     </ul>
   </div>
