--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -95,7 +95,6 @@
     float: none;
     display: block;
     position: relative;
-    background: $blanco;
     border-radius: $general-border-radius;
     width: 100%;
 
@@ -117,7 +116,10 @@
 
     &.active {
       background: $azul;
-
+      @include grid-media($desktop-grid) {
+        background: $azul;
+      }
+      
       .first-level-link {
         color: $blanco;
       }
@@ -141,6 +143,9 @@
 
 .second-level {
   display: none;
+  background: #fff;
+  padding: 0 ;
+  font-size: 16px;
 
   @include grid-media($desktop-grid) {
     box-sizing: content-box;
@@ -157,11 +162,13 @@
     border: solid 1px $mid-grey;
     border-radius: $general-border-radius;
     box-shadow: 1px 1px 5px rgba(68,68,68,0.3);
+    background: transparent;
   }
 
   .second-level-item {
     display: block;
     width: 100%;
+    padding-left: $general-padding;
   }
 
   .second-level-link {
@@ -185,10 +192,19 @@
   }
 
   .active.second-level-item {
-    background: $azul;
 
     & a {
-      color: $blanco;
+        color: $azul;
+        font-weight: bold;
+      }
+
+    @include grid-media($desktop-grid) {
+      background: $azul;
+
+      & a {
+        color: $blanco;
+        font-weight: normal;
+      }
     }
   }
 }
