Fix default section layout

--- a/themes/novatec/layouts/_default/section.html
+++ b/themes/novatec/layouts/_default/section.html
@@ -6,10 +6,10 @@
   <div class="container">
     <ul class="product-grid">
       {{ with .Sections }}
-        {{ partial "blocks.html" . }}
+        {{ partial "product-block.html" . }}
       {{ end }}
       {{ with .Pages }}
-        {{ partial "blocks.html" . }}
+        {{ partial "product-block.html" . }}
       {{ end }}
     </ul>
   </div>
