--- a/themes/novatec/layouts/noticias/single.html
+++ b/themes/novatec/layouts/noticias/single.html
@@ -11,15 +11,15 @@
 {{ define "main" }}
   <div class="container">
     <article class="article-content">
-      {{ if ne .Params.imagen_full "" }}
+      {{ if ne .Params.imagen_intro "" }}
         <div class="article-full-image">
-            <img srcset="{{ .Site.Params.cloudinary_url }}w_320{{ .Params.imagen_full }} 320w,
-                   {{ .Site.Params.cloudinary_url }}w_480{{ .Params.imagen_full }} 480w,
-                   {{ .Site.Params.cloudinary_url }}w_820{{ .Params.imagen_full }} 820w"
+            <img srcset="{{ .Site.Params.cloudinary_url }}w_320{{ .Params.imagen_intro }} 320w,
+                   {{ .Site.Params.cloudinary_url }}w_480{{ .Params.imagen_intro }} 480w,
+                   {{ .Site.Params.cloudinary_url }}w_820{{ .Params.imagen_intro }} 820w"
              sizes="(max-width: 320px) 280px,
                     (max-width: 480px) 440px,
                     820px"
-             src="{{ .Site.Params.cloudinary_url }}w_820{{ .Params.imagen_full }}" alt="{{ $.Title }}">
+             src="{{ .Site.Params.cloudinary_url }}w_820{{ .Params.imagen_intro }}" alt="{{ $.Title }}">
         </div>
       {{end}}
       <h2>{{ .Title }}</h2>
