--- a/themes/novatec/layouts/noticias/single.html
+++ b/themes/novatec/layouts/noticias/single.html
@@ -13,13 +13,13 @@
     <article class="article-content">
       {{ if ne .Params.imagen_intro "" }}
         <div class="article-full-image">
-            <img srcset="{{ .Site.Params.cloudinary_url }}w_320{{ .Params.imagen_intro }} 320w,
-                   {{ .Site.Params.cloudinary_url }}w_480{{ .Params.imagen_intro }} 480w,
-                   {{ .Site.Params.cloudinary_url }}w_820{{ .Params.imagen_intro }} 820w"
+            <img srcset="{{ .Site.Params.cloudinary_url }}w_320,f_auto,q_auto{{ .Params.imagen_intro }} 320w,
+                   {{ .Site.Params.cloudinary_url }}w_480,f_auto,q_auto{{ .Params.imagen_intro }} 480w,
+                   {{ .Site.Params.cloudinary_url }}w_820,f_auto,q_auto{{ .Params.imagen_intro }} 820w"
              sizes="(max-width: 320px) 280px,
                     (max-width: 480px) 440px,
                     820px"
-             src="{{ .Site.Params.cloudinary_url }}w_820{{ .Params.imagen_intro }}" alt="{{ $.Title }}">
+             src="{{ .Site.Params.cloudinary_url }}w_820,f_auto,q_auto{{ .Params.imagen_intro }}" alt="{{ $.Title }}">
         </div>
       {{end}}
       <h2>{{ .Title }}</h2>
