--- a/themes/novatec/layouts/partials/social-metatags.html
+++ b/themes/novatec/layouts/partials/social-metatags.html
@@ -19,11 +19,10 @@
 
 
 {{ with .Params.imagen_intro }}
-  <meta itemprop="image" content="{{.}}">
-  <meta name="twitter:card" content="summary_large_image">
-  <!-- Twitter summary card with large image must be at least 280x150px -->
-  <meta name="twitter:image:src" content="{{.}}">
-  <meta property="og:image" content="{{.}}" />
+  <meta itemprop="image" content="{{ .Site.Params.cloudinary_url }}f_auto,w_550,h_413,c_fill{{.}}">
+  <meta name="twitter:card" content="{{ .Site.Params.cloudinary_url }}f_auto,w_550,h_413,c_fill{{.}}">
+  <meta name="twitter:image:src" content="{{ .Site.Params.cloudinary_url }}f_auto,w_550,h_413,c_fill{{.}}">
+  <meta property="og:image" content="{{ .Site.Params.cloudinary_url }}f_auto,w_550,h_413,c_fill{{.}}" />
 {{ end }}
 
 <!-- Open Graph data -->
