--- a/themes/novatec/layouts/marcas/terms.html
+++ b/themes/novatec/layouts/marcas/terms.html
@@ -5,21 +5,17 @@
 {{ define "main" }}
   <div class="container">
     <ul class="product-grid">
-      {{ range .Site.Taxonomies }}
-        {{ range $key, $value := . }}
-          {{ if eq (urlize $key) (urlize (lower $.Title)) }}
-            {{ range $value.Pages }}
-              <li class="product-grid-block">
-                <a href="{{ .Permalink }}">
-                  <div class="product-grid-image" style="background-image: url(/images/logos/{{ .Params.logo }});"></div>
-                  <div class="product-block-title">
-                    <h3>{{ .Title }}</h3>
-                  </div>
-                </a>
-              </li>
-            {{ end }}
-          {{ end }}
-        {{ end }}
+      {{ range .Pages }}
+        <li class="product-grid-block">
+          <a href="">
+            <div class="product-grid-image">
+              <img src="{{ $.Site.Params.cloudinary_url }}{{ .Params.logo }}" alt="{{ .Title }}" />
+            </div>
+            <div class="product-block-title">
+              <h3>{{ .Title }}</h3>
+            </div>
+          </a>
+        </li>
       {{ end }}
     </ul>
   </div>
