--- a/themes/novatec/layouts/partials/product-block.html
+++ b/themes/novatec/layouts/partials/product-block.html
@@ -1,5 +1,5 @@
 <li class="product-grid-block">
-  <a href="">
+  <a href="{{ .Permalink }}">
     <div class="product-grid-image">
       <img src="{{ $.Site.Params.cloudinary_url }}{{ .Params.imagen }}" alt="{{ .Title }}" />
     </div>
