--- a/layouts/productos/section.html
+++ b/layouts/productos/section.html
@@ -5,6 +5,9 @@
 {{ define "main" }}
   <div class="container">
     <ul class="product-grid">
+      {{ range (where $.Site.RegularPages "Section" "familias") }}
+        {{ partial "product-block.html" . }}
+      {{ end }}
     </ul>
   </div>
 {{ end }}
