--- a/layouts/familias/single.html
+++ b/layouts/familias/single.html
@@ -5,7 +5,11 @@
 {{ define "main" }}
   <div class="container">
     <ul class="product-grid">
-      
+      {{ $array := slice .Params.title }}
+      {{ $paginas := where .Site.RegularPages "Params.familias" "intersect" $array }}
+      {{ range $paginas }}
+        {{ partial "product-block.html" . }}
+      {{ end }}
     </ul>
   </div>
 {{ end }}
