--- a/layouts/productos/single.html
+++ b/layouts/productos/single.html
@@ -5,9 +5,28 @@
 {{ define "main" }}
   <div class="container">
     <div class="grid-container">
-    <section id="producto-main">
-      {{ .Content }}
-    </section>
-  </div>
+      <section id="producto-main">
+        {{ .Content }}
+      </section>
+      <section id="marca">
+        {{ $path := (print "/marcas/" (urlize (index .Params.marcas 0)) ) }}
+        {{ $brand := $.Site.GetPage $path }}
+        {{ with $brand }}
+          <div class="marca-page-logo">
+            {{ partial "marca-logo.html" . }}
+          </div>
+        {{ end }}
+        <div class="marca-tags">
+          {{ range $.Params.familias }}
+            <strong>Familia de productos:</strong> <a href="{{ "/familias/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
+          {{ end }}
+          <br/>
+          {{ if .Params.industrias }}
+            <strong>Industria{{ if gt (len .Params.industrias) 1 }}s{{ end }}:</strong>
+            {{ range $index, $industria := .Params.industrias }}{{ if gt $index 0 }}, {{ end }}<a href="{{ "industrias/" | relURL }}{{ . | urlize }}">{{ . }}</a>{{ end }}
+          {{ end }}
+        </div>
+      </section>
+    </div>
   </div>
 {{ end }}
