--- a/layouts/industrias/single.html
+++ b/layouts/industrias/single.html
@@ -20,10 +20,18 @@
       <div class="industria-page-productos">
         <h2>Productos</h2>
         <ul class="pages-list">
-          {{ range .Pages }}
-            {{ range .Params.marcas }}
-              {{ $.Scratch.Add "marcas" (slice .) }}
-            {{ end }}
+        {{ $array := slice .Title }}
+        {{ $.Scratch.Set "marcas" (slice "") }}
+        {{ $paginas := where .Site.RegularPages "Params.industrias" "intersect" $array }}
+        <ul class="pages-list">
+          {{ range $paginas }}
+
+            {{ with .Params.marcas}}
+              {{ range . }}
+                {{ $.Scratch.Add "marcas" (slice .) }}
+              {{ end }}
+            {{ end}}
+            
             <li>
               <a href="{{ .Permalink }}">{{ .Title }}</a>
             </li>
@@ -33,10 +41,12 @@
       <div class="industria-page-marcas">
         <h2>Marcas</h2>
         <ul class="pages-list">
-          {{ range ($.Scratch.Get "marcas" | uniq)  }}
-            <li>
-              <a href="/marcas/{{ . | urlize }}">{{ . }}</a>
-            </li>
+          {{ $current_marcas := $.Scratch.Get "marcas" }}
+          {{ range uniq $current_marcas }}
+            {{ $brand := $.Site.GetPage (print "/marcas/" (urlize (index .)) ) }}
+            {{ with $brand }}
+              <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+            {{ end }}
           {{ end }}
         </ul>
       </div>
