Quitar texto innecesario

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -87,7 +87,7 @@
     <h3>Boletín de noticias</h3>
     <form name="contacto-footer" action="/gracias" netlify-honeypot="adios" netlify>
       <p class="visually-hidden">
-        <label>Don’t fill this out: <input name="adios"></label>
+        <label><input name="adios"></label>
       </p>
       <label for="email">Email</label>
       <input type="email" name="email" />
