Feed social networks from data file

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -70,18 +70,7 @@
   </section>
   <section class="footer-section">
     <h3>Redes Sociales</h3>
-    <ul class="nav  nav-pills nav-stacked list-unstyled" id="social-footer">
-      <li>
-        <a class="" href="https://www.facebook.com/NovatecIndustrial" target="_blank" rel="noopener noreferrer">
-          <span>Facebook</span>
-        </a>
-      </li>
-      <li>
-        <a class="" href="https://twitter.com/novatecnews" target="_blank" rel="noopener noreferrer">
-          <span>Twitter</span>
-        </a>
-      </li>
-    </ul>
+    {{ partial "social.html" . }}
   </section>
   <section class="footer-section">
     <h3>Boletín de noticias</h3>
