--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -42,12 +42,12 @@
   left: 0;
   background: #fff;
   width: 250px;
-  min-height: 100vh;
+  height: 100vh;
   padding: 0 $general-padding;
   overflow-x: hidden;
   transform: translate3d(-100%, 0, 0);
   transition: 0.5s;
-  overflow-y: auto;
+  overflow-y: scroll;
   z-index: 1;
 
   @include grid-media($desktop-grid) {
