--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -42,7 +42,7 @@
   left: 0;
   background: #fff;
   width: 250px;
-  height: 100vh;
+  max-height: 100vh;
   padding: 0 $general-padding;
   overflow-x: hidden;
   transform: translate3d(-100%, 0, 0);
