Add whatsapp button and fix fontawesome

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -49,6 +49,12 @@
         </svg> 
         +506 2239-1212</li>
       <li>
+        <a href="https://wa.me/50663836383">
+          <i class="fa fa-whatsapp"></i>
+          Escribinos por Whatsapp
+        </a>
+      </li>
+      <li>
         {{ if eq .Section "novatec-construccion" }}
           {{ $email := "ventas-nc@novatec.cr" }}
           <a href="mailto:{{ $email }}" target="_top">
