Remove testing code

--- a/layouts/productos/single.html
+++ b/layouts/productos/single.html
@@ -1,7 +1,6 @@
 {{ define "custom-css"}}
   {{ with .Params.galeria }}
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <!-- Agregar hoja de estilos exclusiva para slick -->
   {{ end }}
 {{ end }}
 
