Add contact form to product page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -39,7 +39,8 @@
   'components/marcas',
   'components/search',
   'components/header-search',
-  'components/slides'
+  'components/slides',
+  'components/contact-form'
   ;
 
 // 6. Page-specific styles
