--- a/layouts/partials/social-metatags.html
+++ b/layouts/partials/social-metatags.html
@@ -1,35 +1,30 @@
 <!-- Update your html tag to include the itemscope and itemtype attributes. -->
 <html itemscope itemtype="http://schema.org/Article">
-
 {{ with .Title }}
   <meta itemprop="name" content="{{.}}">
   <meta property="og:title" content="{{.}}" />
   <meta name="twitter:title" content="{{.}}">
 {{ end }}
-
 {{ with .Params.meta_description }}
   <meta name="description" content="{{.}}" />
   <meta itemprop="description" content="{{.}}">
   <meta name="twitter:description" content="{{.}}">
   <meta property="og:description" content="{{.}}" />
 {{ end }}
-
+{{ with .Params.meta_keywords }}
+  <meta name="keywords" content="{{.}}">
+{{ end }}
 <meta name="twitter:creator" content="@novatecnews">
 <meta name="twitter:site" content="@novatecnews">
-
-
 {{ with .Params.imagen_intro }}
   <meta itemprop="image" content="{{ $.Site.Params.cloudinary_url }}f_auto,w_550,h_413,c_fill{{.}}">
   <meta name="twitter:card" content="{{ $.Site.Params.cloudinary_url }}f_auto,w_550,h_413,c_fill{{.}}">
   <meta name="twitter:image:src" content="{{ $.Site.Params.cloudinary_url }}f_auto,w_550,h_413,c_fill{{.}}">
   <meta property="og:image" content="{{ $.Site.Params.cloudinary_url }}f_auto,w_550,h_413,c_fill{{.}}" />
 {{ end }}
-
 <!-- Open Graph data -->
 <meta property="og:type" content="article" />
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:site_name" content="Novatec Costa Rica" />
-
-
 <meta property="article:published_time" content="{{.PublishDate}}" />
 <meta property="article:modified_time" content="{{.Lastmod}}" />
