Add company field to contact form

--- a/layouts/partials/contact-form.html
+++ b/layouts/partials/contact-form.html
@@ -7,6 +7,8 @@
     </p>
     <label for="nombre">Nombre</label>
     <input type="text" name="nombre"/>
+    <label for="nombre">Empresa</label>
+    <input type="text" name="empresa"/>
     <label for="email">Email</label>
     <input type="email" name="email"/>
     <label for="tel">Teléfono</label>
